--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   pinput: ^3.0.1
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
-  get_storage: ^2.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
